Various updates to testing for Spring version